# blitzer-language-plugins

./: .gitignore  dpd_permission_request.txt  test_download.py  test_language_plugins.py  test_plugins.py  test_plugins_slv.py
blitzer-language-pli/: MANIFEST.in  README.md  pyproject.toml
blitzer-language-pli/blitzer_language_pli/: __init__.py
blitzer-language-slv/: MANIFEST.in  README.md  pyproject.toml
blitzer-language-slv/blitzer_language_slv/: __init__.py
