[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blitzer-language-slv"
version = "0.0.4"
description = "Slovenian language pack for blitzer-cli"
authors = [{name = "Samiddhi"}]
license = "GPL-3.0-or-later"
requires-python = ">=3.7"
dependencies = [
    "requests"
]

[project.entry-points."blitzer.languages"]
slv = "blitzer_language_slv:register"

[tool.setuptools.packages.find]
include = ["blitzer_language_slv"]

